--- a/TestSpringBoot/src/main/resources/templates/dashboard.html
+++ b/TestSpringBoot/src/main/resources/templates/dashboard.html
@@ -3,19 +3,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chia sẻ sách</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
   <div id="top">
     <div id="logo">
-      <a href="#logo">Chia Sẻ Sách</a>
+      <a href="/">Chia Sẻ Sách</a>
     </div>
     <div id="navbar">
       <ul>
-  <li style="float:right" class="dropdown"><a href="#news" class="dropbtn">Đăng Nhập</a>
+  <li th:if="${session.userlogin == null}" style="float:right" class="dropdown"><a style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
+  </li>
+  
+  <li th:unless="${session.userlogin == null}" style="float:right" class="dropdown"><a th:text="${session.userlogin}" style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
     <div class="dropdown-content">
-      <a href="#">Dashboard</a>
-      <a href="#">Đăng xuất</a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="/logout">Đăng xuất</a>
     </div>
   </li>
 </ul>
