--- a/TestSpringBoot/src/main/resources/templates/quanlysach.html
+++ b/TestSpringBoot/src/main/resources/templates/quanlysach.html
@@ -8,14 +8,17 @@
 <body>
   <div id="top">
     <div id="logo">
-      <a href="#logo">Chia Sẻ Sách</a>
+      <a href="/">Chia Sẻ Sách</a>
     </div>
     <div id="navbar">
       <ul>
-  <li style="float:right" class="dropdown"><a href="#news" class="dropbtn">Đăng Nhập</a>
+  <li th:if="${session.userlogin == null}" style="float:right" class="dropdown"><a style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
+  </li>
+  
+  <li th:unless="${session.userlogin == null}" style="float:right" class="dropdown"><a th:text="${session.userlogin}" style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
     <div class="dropdown-content">
-      <a href="#">Dashboard</a>
-      <a href="#">Đăng xuất</a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="/logout">Đăng xuất</a>
     </div>
   </li>
 </ul>
@@ -24,9 +27,9 @@
   <hr>
   <div class="menu-left">
   <ul>
-  <li><a href="#home">Dashboard</a></li>
-    <li><a class="active" href="#news">Quản lý sách</a>
-  <li><a href="#news">Quản lý danh mục</a></li>
+  <li><a href="/dashboard">Dashboard</a></li>
+    <li><a class="active" href="/dashboard/quanlysach">Quản lý sách</a>
+  <li><a href="/dashboard/quanlytheloai">Quản lý thể loại</a></li>
 </ul>
     </div>
 
@@ -67,7 +70,7 @@
   </tbody>
   <tfoot>
     <tr>
-      <td colspan="8"><input type="button" value="Thêm sách" style="width: 100%"></td>
+      <td style="text-align: center;" colspan="8"><a th:href="@{/dashboard/quanlysach/add}">Add</a></td>
     </tr>
   </tfoot>
 </table>
@@ -80,17 +83,6 @@
       	</div>
       </div>
   </div>
-<!--   <h2>Fixed Full-height Side Nav</h2>
-  <h3>Try to scroll this area, and see how the sidenav sticaks to the page</h3>
-  <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
-  <p>Also notice that we hhave set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p>
-  <p>Some text..</p> -->
 </div>
 </body>
 </html>
