--- a/TestSpringBoot/src/main/resources/templates/thongtin.html
+++ b/TestSpringBoot/src/main/resources/templates/thongtin.html
@@ -8,19 +8,21 @@
 <body>
   <div id="top">
     <div id="logo">
-      <a href="#logo">Chia Sẻ Sách</a>
+      <a href="/">Chia Sẻ Sách</a>
     </div>
     <div id="navbar">
       <ul>
-  <li><a class="active" href="#home">Trang chủ</a></li>
-  <li class="dropdown"><a href="#news" class="dropbtn">Danh Mục</a>
+  <li><a style="color: #3399ff" class="active" href="/">Trang chủ</a></li>
+  <li><a style="color: #3399ff" href="#about">Thông Tin</a></li>
+  <li th:if="${session.userlogin == null}" style="float:right" class="dropdown"><a style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
+  </li>
+  
+  <li th:unless="${session.userlogin == null}" style="float:right" class="dropdown"><a th:text="${session.userlogin}" style="color: #3399ff" href="/login" class="dropbtn">Đăng Nhập</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Lik 2</a>
-      <a href="#">Lid</a>
+      <a href="/dashboard">Dashboard</a>
+      <a href="/logout">Đăng xuất</a>
     </div>
   </li>
-  <li><a href="#about">Thông Tin</a></li>
 </ul>
     </div>
   </div>
