--- a/TestSpringBoot/src/main/resources/static/css/style.css
+++ b/TestSpringBoot/src/main/resources/static/css/style.css
@@ -267,8 +267,24 @@ form{
 
 /*  */
 /* table  */
-table, th, td {
+/*table, th, td {
   border: 1px solid black;
+}*/
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+  background-color: #4CAF50;
+  color: white;
 }
 /*  */
 .row-crud{
